init redis/repo&repo methods, add log level, finalize compose file and few fixes on project
