# docs/swagger.json
@@ -9,6 +9,36 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/throttler": {
+            "post": {
+                "description": "Add new request for external svc",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "throttler"
+                ],
+                "summary": "New request",
+                "operationId": "NewReq",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.newReqResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
         "/throttler/{uuid}": {
             "get": {
                 "description": "Return request by uuid",
@@ -34,36 +64,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/v1.getReqResp"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    }
-                }
-            }
-        },
-        "/translation": {
-            "post": {
-                "description": "Add new request for external svc",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "throttler"
-                ],
-                "summary": "New request",
-                "operationId": "NewReq",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/v1.newReqResp"
                         }
                     },
                     "500": {
